should before asset-rev to enable fingerprinting for production enviroment

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "sprites"
   ],
   "ember-addon": {
-    "main": "ember-cli-spritesmith-main.js"
+    "main": "ember-cli-spritesmith-main.js",
+    "before": "broccoli-asset-rev"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
